# ChangeLog for app-editors/emacs-cvs
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-editors/emacs-cvs/ChangeLog,v 1.182 2008/01/10 17:26:15 ulm Exp $

  10 Jan 2008; Ulrich Mueller <ulm@gentoo.org> emacs-cvs-23.0.50-r1.ebuild,
  emacs-cvs-23.0.60-r1.ebuild:
  Remove desktop and icon files to avoid collisions between SLOTs and with
  x11-misc/emacs-desktop. Thanks to Stelian Ionescu for pointing this out.

  02 Jan 2008; Ulrich Mueller <ulm@gentoo.org> emacs-cvs-22.1.50-r2.ebuild,
  emacs-cvs-22.1.50_p20070829-r2.ebuild,
  emacs-cvs-23.0.0_p20070920-r1.ebuild, emacs-cvs-23.0.50-r1.ebuild,
  emacs-cvs-23.0.60-r1.ebuild:
  Remove explicit zlib dependency.

  28 Dec 2007; Ulrich Mueller <ulm@gentoo.org> emacs-cvs-22.1.50-r2.ebuild,
  emacs-cvs-22.1.50_p20070829-r2.ebuild,
  emacs-cvs-23.0.0_p20070920-r1.ebuild, emacs-cvs-23.0.50-r1.ebuild,
  emacs-cvs-23.0.60-r1.ebuild:
  Include net-libs/liblockfile in dependencies, fixes bug #203624.

  13 Dec 2007; Christian Faulhammer <opfer@gentoo.org>
  emacs-cvs-23.0.60-r1.ebuild:
  add dbus support

  02 Dec 2007; Ulrich Mueller <ulm@gentoo.org> emacs-cvs-22.1.50-r2.ebuild,
  emacs-cvs-22.1.50_p20070829-r2.ebuild,
  emacs-cvs-23.0.0_p20070920-r1.ebuild, emacs-cvs-23.0.50-r1.ebuild,
  emacs-cvs-23.0.60-r1.ebuild:
  Declare some variables as local, add some quotes.

  02 Dec 2007; Christian Faulhammer <opfer@gentoo.org>
  emacs-cvs-23.0.50-r1.ebuild:
  make activation of dbus support possible

  01 Dec 2007; Ulrich Mueller <ulm@gentoo.org> emacs-cvs-22.1.50-r2.ebuild,
  emacs-cvs-22.1.50_p20070829-r2.ebuild,
  emacs-cvs-23.0.0_p20070920-r1.ebuild, emacs-cvs-23.0.50-r1.ebuild,
  emacs-cvs-23.0.60-r1.ebuild:
  Rename site-init file for USE=source.

*emacs-cvs-23.0.0_p20070920-r1 (27 Nov 2007)
*emacs-cvs-22.1.50_p20070829-r2 (27 Nov 2007)

  27 Nov 2007; Ulrich Mueller <ulm@gentoo.org>
  +files/emacs-cvs-format-int.patch, -emacs-cvs-22.1.50-r1.ebuild,