@@ -9,10 +9,10 @@ AUX emacs-cvs-makeinfo-regexp.patch 553 RMD160 7e80b9d61a4cd253449252c98a5da47e0
 AUX emacs-cvs-no-x-compile.patch 452 RMD160 6c698c2ce80c496079810da7290315ff579c9194 SHA1 5501d6da55dace13027a327b331f2882d6c61a3d SHA256 cf6b5d8a48796618a98f3a66f85f0010290b277be1d605304e7d83f36cc69349
 DIST emacs-cvs-22.1.50_p20070829.tar.bz2 20915594 RMD160 47f3c1c543de65c49deadbcdf4e83236aaa68f1b SHA1 6223e5b4cde078814648306b095f6081f56eea77 SHA256 c27196e9359d5ad4f30e3552c7897c995798324a323a4b47060b98426a71891f
 DIST emacs-cvs-23.0.0_p20070920.tar.bz2 21944733 RMD160 4ca3f66530c44a82e1badba4dfc934b2e5e5b8d7 SHA1 7e8b99d695adaec619837a6eec22c04ac69cb7aa SHA256 c38d4be31e047f5a470b1664a2721b3dcb83b3876cb3490a86e05804aebf4f2a
-EBUILD emacs-cvs-22.1.50-r2.ebuild 8631 RMD160 b719538fc0e1da8b65e188c0e53f0588cf1895d9 SHA1 d047c2be5ccca5369d6b60e39e0d8fe53f62ce3d SHA256 57fafcdfa2e7aef8376cc99602c3a7ce1f3b47f03db3f7f64940031705e61a80
-EBUILD emacs-cvs-22.1.50_p20070829-r2.ebuild 8320 RMD160 ef3026049df6d64ec35d2b59232d0c2971122bbd SHA1 1db9915511d67d0c6c480aaa32a97d35b7883225 SHA256 837bbdb838a064a5cbab729e2e583db85a1c0548f2262a5c5c876ade9dfe8643
-EBUILD emacs-cvs-23.0.0_p20070920-r1.ebuild 8614 RMD160 5cb5293d1486d98c35f2f49364a913eb71775fd1 SHA1 baff0752def09299b548772c562e74542d6dd36c SHA256 bb080582938b82cb36761d302cf9dfa34fe8c862c145ddf8296666e343eadc8e
-EBUILD emacs-cvs-23.0.50-r1.ebuild 8738 RMD160 bde4d38a2dca9246737c835c7bd2896a6d701cd0 SHA1 5b65a2c7b007d2c0dd8c346bdc220bf8ad7fe52b SHA256 8289d0bc124d5ad0aa29b472f62f31c97135cac0054e64e3ccd1be7d2d6d2141
-EBUILD emacs-cvs-23.0.60-r1.ebuild 8953 RMD160 9776cc0fbb10b286590348444cfb91fbd1a98c5d SHA1 5926489dd94ea8f2c5c48f381d3307da113e7ee1 SHA256 fe1256d68214a52aca474604fbb8788e2c9d7e04bdc0e11a09ce2137ebfde582
-MISC ChangeLog 35393 RMD160 a1a769ae9d907e3ad44b75ef0ae3c4f779a7a4d8 SHA1 5e9eef4a0ccb0aab38445b3f1df4eb45cea8e5f7 SHA256 f535c4682e69566be50c86e4a908511187ad3bb7a5327c24aa5c6832ab5369ac
+EBUILD emacs-cvs-22.1.50-r2.ebuild 8709 RMD160 ce50b63bfabe8799378fc2f758c60b0788c10466 SHA1 3ab8d6fb73e42de34f47e4bdfff53dff010473ac SHA256 751303431ca32815a6b8c5ed81bd9373d3bf652aa430afdee14f7d9cd4dd7ee9
+EBUILD emacs-cvs-22.1.50_p20070829-r2.ebuild 8398 RMD160 fcd89f50d5293254aea9027657f9e3ca57d6bc81 SHA1 e2f553fc0c744185af2736e35226dab49091800c SHA256 d4ecc7ca955466b806ca2ba9309a8ee0f5af14c20c8c20e8d01f1fd4239408c1
+EBUILD emacs-cvs-23.0.0_p20070920-r1.ebuild 8692 RMD160 c9a2b20f35e4f0c312ed13ee9c09a0ec12d741d8 SHA1 9bf6eb420a2fcfd5385b53edd266d279ea92dfdc SHA256 8c895e605cd6d4784898a8d2fd39688a5fc34b25b75566c77fbb5ab16ad251ac
+EBUILD emacs-cvs-23.0.50-r1.ebuild 8816 RMD160 85976498457add7301fcd6d6dce5a9a46aa5693c SHA1 5e80ef1ed6f54056088387693533c157ec89e019 SHA256 788a043e7a42f2d86f5d8a5a1a53e6f988e87680dd70eaeb24c1c6eb1f37702b
+EBUILD emacs-cvs-23.0.60-r1.ebuild 9031 RMD160 3cadb3fe17283d6b554d6c9c15d56d460f37baba SHA1 5c411903f1c1b3054a5d76445a817e88a80c2305 SHA256 477317941698175df63ae73f9baf3cd7d144c8add6f3be8e3722186bbae5f1bb
+MISC ChangeLog 35742 RMD160 29f6eca67f529f2edd1a772858141afbb8d10ab0 SHA1 e36683e990e6cde7ecf5500a3d97658e25e16b85 SHA256 327761946960d321da13df87c34794571b428124afdc95090c20bac0f882edcd
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
