@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/emacs-cvs/emacs-cvs-22.1.50_p20070829-r2.ebuild,v 1.6 2008/01/10 14:47:41 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/emacs-cvs/emacs-cvs-22.1.50_p20070829-r2.ebuild,v 1.7 2008/01/26 18:52:34 ulm Exp $
 
 EAPI="prefix"
 
@@ -59,9 +59,22 @@ src_unpack() {
 	unpack ${A}
 	cd "${S}"
 
+	epatch "${FILESDIR}/${PN}-freebsd-sparc.patch"
+	epatch "${FILESDIR}/${PN}-make-tramp-temp-file.patch"
+	epatch "${FILESDIR}/${PN}-makeinfo-regexp.patch"
+	epatch "${FILESDIR}/${PN}-hack-local-variables.patch"
+	epatch "${FILESDIR}/${PN}-format-int.patch"
+
 	sed -i -e "s:/usr/lib/crtbegin.o:$(`tc-getCC` -print-file-name=crtbegin.o):g" \
 		-e "s:/usr/lib/crtend.o:$(`tc-getCC` -print-file-name=crtend.o):g" \
 		"${S}"/src/s/freebsd.h || die "unable to sed freebsd.h settings"
+
+	if ! use alsa; then
+		# ALSA is detected even if not requested by its USE flag.
+		# Suppress it by supplying pkg-config with a wrong library name.
+		sed -i -e "/ALSA_MODULES=/s/alsa/DiSaBlEaLsA/" configure.in \
+			|| die "unable to sed configure.in"
+	fi
 	if ! use gzip-el; then
 		# Emacs' build system automatically detects the gzip binary and
 		# compresses el files. We don't want that so confuse it with a
@@ -69,15 +82,6 @@ src_unpack() {
 		sed -i -e "s/ gzip/ PrEvEnTcOmPrEsSiOn/" configure.in \
 			|| die "unable to sed configure.in"
 	fi
-
-	epatch "${FILESDIR}/${PN}-freebsd-sparc.patch"
-	epatch "${FILESDIR}/${PN}-make-tramp-temp-file.patch"
-	epatch "${FILESDIR}/${PN}-makeinfo-regexp.patch"
-	epatch "${FILESDIR}/${PN}-hack-local-variables.patch"
-	epatch "${FILESDIR}/${PN}-format-int.patch"
-	# ALSA is detected and used even if not requested by the USE=alsa flag.
-	# So remove the automagic check
-	use alsa || epatch "${FILESDIR}/${PN}-disable_alsa_detection-r1.patch"
 
 	eautoreconf
 }
