@@ -1,6 +1,13 @@
 # ChangeLog for app-editors/emacs-cvs
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/emacs-cvs/ChangeLog,v 1.182 2008/01/10 17:26:15 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/emacs-cvs/ChangeLog,v 1.183 2008/01/26 18:52:34 ulm Exp $
+
+  26 Jan 2008; Ulrich Mueller <ulm@gentoo.org>
+  -files/emacs-cvs-disable_alsa_detection-r1.patch,
+  emacs-cvs-22.1.50-r2.ebuild, emacs-cvs-22.1.50_p20070829-r2.ebuild,
+  emacs-cvs-23.0.0_p20070920-r1.ebuild, emacs-cvs-23.0.50-r1.ebuild,
+  emacs-cvs-23.0.60-r1.ebuild:
+  The ALSA disable patch failed (again) on the trunk. Replace it by sed magic.
 
   10 Jan 2008; Ulrich Mueller <ulm@gentoo.org> emacs-cvs-23.0.50-r1.ebuild,
   emacs-cvs-23.0.60-r1.ebuild:
